# mlib

./: .gitignore  Makefile  makefile.nt  pom.xml  release.properties.in
appcmd/: pom.xml
appcmd/src/: makefile.nt  pom.xml
appcmd/src/cmdsrc/: dict.mlvl  facility.mlvl  huobi.mlvl  okcoin.mlvl  poldat.mlvl  trade.mlvl  user.mlvl
appcmd/src/demo_java-master/: pom.xml
appcmd/src/libsrc/: makefile.nt
client/: makefile.nt
client/buildfiles/: BuildMSI.targets  CompileAndTest.targets  Coverage.targets  CreateDocs.targets  StaticAnalysis.targets  common.targets  config.targets  dllImports.targets  filebase.targets  folder.targets  helpfiles.targets  project.targets  resources.targets  serverproject.targets  xslfiles.targets
client/src/: makefile.nt
client/src/mocaclient/: Command.cs  ConnectionBase.cs  DirectConnection.cs  ExecuteCallBackEventArgs.cs  ExecuteCommandResult.cs  ExecuteCommandResultBase.cs  FullConnection.Objects.cs  FullConnection.cs  FullConnectionEventArgs.cs  GetDataCallBackEventArgs.cs  GetDataResult.cs  HeaderData.cs  IInternalCommand.cs  InternalCallBackEventArgs.cs  InternalCommand.cs  InternalObjectCommand.cs  LoginInfo.cs  MocaArgument.cs  MocaClient.build  MocaClient.csproj  MocaClient.csv  MocaClient.sln  MocaClientClassDiagram.cd  MultiThreadQueueConnection.cs  ObjectMappingDiagram.cd  ServerInfo.cs  SmartConnection.cs  WebConnection.cs  msbuild.proj
client/src/mping/: CommandLineArguments.cs  Program.cs  makefile.nt  mping.csproj  mping.sln  msbuild.proj
client/src/winmsql.net/: App.config  Command.cs  LoginInfo.cs  Program.cs  ServerCache.cs  ServerInfo.cs  cFormat.cs  cLookup.cs  ctlColumnInfo.Designer.cs  ctlColumnInfo.cs  ctlFavorite.Designer.cs  ctlFavorite.cs  ctlFavorite.resx  ctlFind.Designer.cs  ctlFind.cs  ctlHistory.Designer.cs  ctlHistory.cs  ctlLogin.Designer.cs  ctlLogin.cs  ctlLogin.resx  ctlOptions.Designer.cs  ctlOptions.cs  ctlSyntaxColorOptions.Designer.cs  ctlSyntaxColorOptions.cs  ctlSyntaxColorOptions.resx  ctlTracing.Designer.cs  ctlTracing.cs  ctlValue.Designer.cs  ctlValue.cs  ctlWinMSQL.Designer.cs  ctlWinMSQL.cs  ctlWinMSQL.resx  msbuild.proj  winMSQLTab.Designer.cs  winMSQLTab.cs  winMSQLTab.resx  winmsql.csproj  winmsql.csv  winmsql.exe.licenses  winmsql.sln
config/: Config.mk.aix5-powerpc  Config.mk.aix6-powerpc  Config.mk.aix7-powerpc  Config.mk.darwin-x64  Config.mk.darwin-x86  Config.mk.hpux11-ia64  Config.mk.linux-x64  Config.mk.linux-x86  Config.mk.solaris10-sparc  Config.mk.solaris11-sparc  Config.mk.win32-x86  InstallShield.h  InstallShield.h.in  TaggedVersion  configure  configure.in  configure.nt.pl  configure.vs2008  makefile  makefile.nt  mocaconfig.h.aix5-powerpc  mocaconfig.h.aix6-powerpc  mocaconfig.h.aix7-powerpc  mocaconfig.h.darwin-x64  mocaconfig.h.hpux11-ia64  mocaconfig.h.solaris11-sparc  profile.in
data/: 82.mem  hibernate.cfg.xml  hooks.xml  infinispan.xml  logging.xml  runtime-logging.xml  services.xml
db/ddl/Docs/: bldg.tdoc  comp_ver.tdoc  dict.tdoc  hb_buysell_data.tdoc  hb_real_data.tdoc  hb_top10_data.tdoc  hb_trade_data.tdoc  job_definition_exec.tdoc  job_env_definition.tdoc  oc_buysell_data.tdoc  oc_ticker_data.tdoc  oc_top10_data.tdoc  oc_trade_data.tdoc  poldat.tdoc  task_definition.tdoc  task_definition_exec.tdoc  trade_stat_data.tdoc  usr.tdoc  var_txt.tdoc  wh.tdoc
db/ddl/Indexes/: bldg_pk.idx  comp_ver_pk.idx  dict_pk.idx  hb_buysell_data_pk.idx  hb_real_data_pk.idx  hb_top10_data_pk.idx  job_definition_exec_idx1.idx  job_definition_exec_pk.idx  job_definition_pk.idx  job_env_definition_pk.idx  oc_buysell_data_pk.idx  oc_ticker_data_pk.idx  oc_top10_data_pk.idx  poldat_pk.idx  task_definition_exec_idx1.idx  task_definition_exec_pk.idx  task_definition_pk.idx  task_env_definition_pk.idx  trade_stat_data_pk.idx  usr_pk.idx  var_txt_pk.idx  wh_pk.idx
db/ddl/Tables/: bldg.tbl  comp_ver.tbl  dict.tbl  hb_buysell_data.tbl  hb_real_data.tbl  hb_top10_data.tbl  hb_trade_data.tbl  job_definition.tbl  poldat.tbl  (+15 more)
docs/: MOCA-CommandGrammar.vsd
docs/css/: redprairie.css
docs/html/: database.html  wm.html
docs/script/: fixdesc.js
docs/xsl/: command.xml  command.xsl  component-level.xml  component-level.xsl  db.xml  db.xsl  dbindex.xml  dbindex.xsl  index.xml  index.xsl  trigger.xml  trigger.xsl
makefiles/: Application.mk  Application.mk.win32  ApplicationLibs.mk  ApplicationLibs.mk.win32  Component.mk  Component.mk.win32  ComponentLibs.mk.win32  Config.mk  DotNetAssembly.mk.win32  DotNetComponent.mk.win32  Header.mk.win32  Library.mk  Library.mk.win32  LibraryLibs.mk  LibraryLibs.mk.win32  MSBuild.mk.win32  StandardDirFooter.mk.win32  StandardDirHeader.mk  StandardDirHeader.mk.win32  StandardFooter.mk  StandardFooter.mk.win32  StandardHeader.mk  StandardHeader.mk.win32  install.sh  ntstd.mk
reports/: mocareport.jrxml  report1.jrxml
scripts/: create_symbol_link_for_header_files.bat  readme_install_on_ubuntu.txt  setup_mvn_pck.bat  start_mlib.bat
src/: Makefile  makefile.nt
src/appsrc/: Makefile  makefile.nt
src/cmdsrc/: mocaadmin.mlvl  mocabase.mlvl  mocacrud.mlvl  mocadbupgrade.mlvl  mocadbutl.mlvl  mocaems.mlvl  mocarepository.mlvl  mocasecurity.mlvl
src/incsrc/: cmdlib.h  common.h  copyright.h  dblib.h  evtlib.h  jnilib.h  madlib.h  makefile  makefile.nt  mcclib.h  mislib.h  moca.h  mocacolwid.h  mocaconfig.h  mocaddl.h  mocaerr.h  mocagendef.h  mocasymbols.h  mocatbldef.h  mocaversion.h  mxmllib.h  oslib.h  sqlDataTypes.h  sqlDataTypesH2.h  sqlDataTypesObsolete.h  sqlDataTypesOracle.h  sqlDataTypesSQLServer.h  sqlconvlib.h  sqllib.h  srvlib.h  tablelen.h  usrtbldef.h  vartbldef.h
src/libsrc/: Makefile  makefile.nt
src/main/: Makefile  makefile.nt
src/resource/: 82.registry  job_definition.sql  job_definition_oracle.sql  sample_table.sql  task_definition.sql  task_definition_oracle.sql
src/webapp/: web.xml
test/data/: hooks.xml  logging.xml  test-jgroups-config.xml
test/src/: Makefile  makefile.nt
web/console/: console.html  console.js  login.html  login.js
web/ext40/: login.do  login.html  mocaxmlresponse.xml
web/stash/: stashloader.js
(+3943 files in other folders)
